ascruins: spider, undead, bat spawns

--- a/mod/area/ascruins1.git.yml
+++ b/mod/area/ascruins1.git.yml
@@ -9,6 +9,7 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 98}
     AmbientSndNitVol: {type: :int, value: 32}
+    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 0}
     MusicBattle: {type: :int, value: 40}
     MusicDay: {type: :int, value: 52}
@@ -24,8 +25,117 @@ Door List:
 
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 172}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gruftschrecken}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 146}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: schatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 58}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: mummie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -38.5306}
+        Y: {type: :float, value: -104.3741}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 22.6516}
+        Y: {type: :float, value: -94.0222}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -38.2294}
+        Y: {type: :float, value: 0.5293}
+        Z: {type: :float, value: 0.425}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, schwer
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 8}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 60.1868}
+        Y: {type: :float, value: 66.9466}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 61.2157}
+        Y: {type: :float, value: 52.8239}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 73.4125}
+        Y: {type: :float, value: 77.8189}
+        Z: {type: :float, value: 0.4}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 74.2475}
+        Y: {type: :float, value: 41.0168}
+        Z: {type: :float, value: 0.4}
+    Tag: {type: :cexostr, value: Untote_schwer}
+    TemplateResRef: {type: :resref, value: untote_schwer}
+    XPosition: {type: :float, value: 51.0532}
+    YPosition: {type: :float, value: 116.6882}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
