--- a/mod/area/wueste39.git.yml
+++ b/mod/area/wueste39.git.yml
@@ -9,6 +9,7 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 30}
     AmbientSndNitVol: {type: :int, value: 32}
+    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 89}
     MusicBattle: {type: :int, value: 57}
     MusicDay: {type: :int, value: 14}
@@ -24,8 +25,254 @@ Door List:
 
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    Comment: {type: :cexostr, value: ""}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_krieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_schuetze}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.4434}
+        Y: {type: :float, value: -97.1112}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.5821}
+        Y: {type: :float, value: -97.1112}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 4.2865}
+        Y: {type: :float, value: 0.1478}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 7}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 47.5611}
+        Y: {type: :float, value: 71.4325}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 47.4133}
+        Y: {type: :float, value: 39.9489}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 57.6122}
+        Y: {type: :float, value: 20.438}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Untote_normal}
+    TemplateResRef: {type: :resref, value: untote_normal}
+    XPosition: {type: :float, value: 95.0082}
+    YPosition: {type: :float, value: 98.7773}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_krieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_schuetze}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.4431}
+        Y: {type: :float, value: -97.4072}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 5.9127}
+        Y: {type: :float, value: -97.555}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 5.469}
+        Y: {type: :float, value: -0.1478}
+        Z: {type: :float, value: 0.024}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.024}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, normal
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 7}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 52.7344}
+        Y: {type: :float, value: 64.0416}
+        Z: {type: :float, value: 0.0041}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 51.8476}
+        Y: {type: :float, value: 40.5402}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Untote_normal}
+    TemplateResRef: {type: :resref, value: untote_normal}
+    XPosition: {type: :float, value: 0.705}
+    YPosition: {type: :float, value: 99.2211}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_krieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 150}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: skelett_schuetze}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.0201}
+        Y: {type: :float, value: -7.112}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 96.7955}
+        Y: {type: :float, value: -7.2598}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 96.6477}
+        Y: {type: :float, value: 1.461}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0916}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, normal
+    MaxCreatures: {type: :int, value: 6}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 4}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 30.7102}
+        Y: {type: :float, value: 44.6787}
+        Z: {type: :float, value: -0.005}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 71.6542}
+        Y: {type: :float, value: 44.531}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Untote_normal}
+    TemplateResRef: {type: :resref, value: untote_normal}
+    XPosition: {type: :float, value: 0.7255}
+    YPosition: {type: :float, value: 8.0391}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
@@ -6692,6 +6939,7 @@ VarTable:
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
+    Comment: {type: :cexostr, value: ""}
     Name: {type: :cexostr, value: weather}
     Type: {type: :dword, value: 1}
     Value: {type: :int, value: 1}
