Wueste near Flusslauf: scorpions + undead

--- a/mod/area/wueste96.git.yml
+++ b/mod/area/wueste96.git.yml
@@ -9,6 +9,7 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 93}
     AmbientSndNitVol: {type: :int, value: 32}
+    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 89}
     MusicBattle: {type: :int, value: 57}
     MusicDay: {type: :int, value: 58}
@@ -24,8 +25,105 @@ Door List:
 
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 172}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: gruftschrecken}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 146}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: schatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 58}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: mummie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -15.4097}
+        Y: {type: :float, value: -98.4915}
+        Z: {type: :float, value: 0.0465}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 6.0687}
+        Y: {type: :float, value: -98.4996}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 5.8353}
+        Y: {type: :float, value: -0.7002}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Untote, schwer
+    MaxCreatures: {type: :int, value: 6}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 3}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 31.6772}
+        Y: {type: :float, value: 75.792}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 16.7389}
+        Y: {type: :float, value: 39.6132}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: Untote_schwer}
+    TemplateResRef: {type: :resref, value: untote_schwer}
+    XPosition: {type: :float, value: 92.831}
+    YPosition: {type: :float, value: 99.1331}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
