--- a/mod/area/wueste05.git.yml
+++ b/mod/area/wueste05.git.yml
@@ -9,6 +9,7 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 30}
     AmbientSndNitVol: {type: :int, value: 32}
+    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 89}
     MusicBattle: {type: :int, value: 57}
     MusicDay: {type: :int, value: 58}
@@ -24,8 +25,172 @@ Door List:
 
 Encounter List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 823}
+        CR: {type: :float, value: 0.5}
+        ResRef: {type: :resref, value: winzigerskorpion}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 824}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: kleinerskorpion}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.1093}
+        Y: {type: :float, value: -5.1861}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 98.4964}
+        Y: {type: :float, value: -4.3609}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 71.8265}
+        Y: {type: :float, value: 3.145}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Skorpione, klein
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 4}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 31.1903}
+        Y: {type: :float, value: 51.0515}
+        Z: {type: :float, value: -0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 56.3468}
+        Y: {type: :float, value: 51.0515}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Skorpione_klein}
+    TemplateResRef: {type: :resref, value: skorpione_klein}
+    XPosition: {type: :float, value: 0.8316}
+    YPosition: {type: :float, value: 5.2962}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 825}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: mittlererskorpio}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 826}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: grosserskorpion}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.891}
+        Y: {type: :float, value: -74.782}
+        Z: {type: :float, value: 0.0272}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 22.0669}
+        Y: {type: :float, value: -98.6066}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 99.2235}
+        Y: {type: :float, value: -98.8129}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 98.7308}
+        Y: {type: :float, value: -3.3934}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Skorpione, gross
+    MaxCreatures: {type: :int, value: 5}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 37.8179}
+        Y: {type: :float, value: 55.5209}
+        Z: {type: :float, value: 0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 57.3}
+        Y: {type: :float, value: 56.4039}
+        Z: {type: :float, value: 0.3068}
+    Tag: {type: :cexostr, value: Skorpione_gross}
+    TemplateResRef: {type: :resref, value: skorpione_gross}
+    XPosition: {type: :float, value: 0.2951}
+    YPosition: {type: :float, value: 99.3353}
+    ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
   value: []
@@ -4441,6 +4606,7 @@ VarTable:
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 0
+    Comment: {type: :cexostr, value: ""}
     Name: {type: :cexostr, value: weather}
     Type: {type: :dword, value: 1}
     Value: {type: :int, value: 1}
