--- a/mod/area/castletimrap.are.yml
+++ b/mod/area/castletimrap.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: Der Pfad in die Dunkelheit - Pfad
+    0: Der Pfad in die Dunkelheit
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_cave}
 OnExit: {type: :resref, value: _area_leave}
