fix keelacave entrance refs #334

--- a/mod/area/huegel_n00_o00.git.yml
+++ b/mod/area/huegel_n00_o00.git.yml
@@ -170,24 +170,24 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
-        X: {type: :float, value: -91.2024}
-        Y: {type: :float, value: -1.7801}
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
         Z: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
-        X: {type: :float, value: -89.4109}
-        Y: {type: :float, value: -92.9939}
+        X: {type: :float, value: 0.0042}
+        Y: {type: :float, value: -1.3297}
         Z: {type: :float, value: 0.025}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
-        X: {type: :float, value: 0.5761}
-        Y: {type: :float, value: -92.9075}
-        Z: {type: :float, value: 0.025}
+        X: {type: :float, value: 3.0834}
+        Y: {type: :float, value: -2.2862}
+        Z: {type: :float, value: 0.0094}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
-        X: {type: :float, value: 0.0067}
-        Y: {type: :float, value: -1.0851}
-        Z: {type: :float, value: 0.2514}
+        X: {type: :float, value: 3.0144}
+        Y: {type: :float, value: -0.593}
+        Z: {type: :float, value: 0.025}
     LocalizedName: 
       type: :cexolocstr
       value: 
@@ -227,8 +227,8 @@ Encounter List:
         Z: {type: :float, value: 0.2135}
     Tag: {type: :cexostr, value: Dachse}
     TemplateResRef: {type: :resref, value: dachs}
-    XPosition: {type: :float, value: 97.1175}
-    YPosition: {type: :float, value: 96.8069}
+    XPosition: {type: :float, value: 7.7766}
+    YPosition: {type: :float, value: 84.0159}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
@@ -3551,7 +3551,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 4}
     Appearance: {type: :dword, value: 1055}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4055,7 +4055,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 4}
     Appearance: {type: :dword, value: 1055}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4244,7 +4244,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 4}
     Appearance: {type: :dword, value: 1056}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4937,7 +4937,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1283}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5693,7 +5693,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1280}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7709,7 +7709,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1280}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8927,6 +8927,69 @@ Placeable List:
     X: {type: :float, value: 23.1701}
     Y: {type: :float, value: 93.002}
     Z: {type: :float, value: 0.1705}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 1286}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.0}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 10}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 5}
+    HP: {type: :short, value: 10}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      value: 
+        0: Loch im Boden
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 0}
+    Plot: {type: :byte, value: 1}
+    PortraitId: {type: :word, value: 0}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
+    Tag: {type: :cexostr, value: LochimBoden}
+    TemplateResRef: {type: :resref, value: lochimboden}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 0}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 9.6557}
+    Y: {type: :float, value: 85.743}
+    Z: {type: :float, value: 0.01}
 SoundList: 
   type: :list
   value: []
@@ -10325,11 +10388,11 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 11.6599}
+    XPosition: {type: :float, value: 12.3329}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 85.3114}
+    YPosition: {type: :float, value: 80.8803}
     ZOrientation: {type: :float, value: 0.0}
-    ZPosition: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0125}
 WaypointList: 
   type: :list
   value: 
