--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -538,6 +538,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_ttr01}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_ttf01}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_tdm01}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_merge}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_cep2c}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: wizard_hats}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: dynamicgear}}
