Darkness: add third layer of hell
refs #337

--- a/mod/area/darkness001.git.yml
+++ b/mod/area/darkness001.git.yml
@@ -108,8 +108,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: darkness002_2_darkness001}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -117,7 +117,7 @@ Door List:
       value: 
         0: Evil Stone Door 20n0
     Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -133,10 +133,10 @@ Door List:
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 28}
-    Plot: {type: :byte, value: 1}
+    Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 1013}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StoneDoor_20n0}
+    Tag: {type: :cexostr, value: darkness001_2_darkness002}
     TemplateResRef: {type: :resref, value: ctp_door_20n0}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
