Darkness: layer four
refs #337

--- a/mod/area/darkness002.git.yml
+++ b/mod/area/darkness002.git.yml
@@ -107,15 +107,15 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: darkness003_2_darkness002}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
       value: 
         0: Metal Door
     Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -131,10 +131,10 @@ Door List:
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
+    Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: metaldoor}
+    Tag: {type: :cexostr, value: darkness002_2_darkness003}
     TemplateResRef: {type: :resref, value: ctp_curtain_22}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
