Darkness: rearrange some encounter triggers
refs #337

--- a/mod/area/darkness003.git.yml
+++ b/mod/area/darkness003.git.yml
@@ -113,6 +113,7 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 187}
         CR: {type: :float, value: 5.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: nw_wraith}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -470,6 +471,99 @@ Encounter List:
     XPosition: {type: :float, value: 35.1884}
     YPosition: {type: :float, value: 52.7481}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 186}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: nw_allip}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 146}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: nw_shadow}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: nw_wraith}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 156}
+        CR: {type: :float, value: 6.0}
+        ResRef: {type: :resref, value: nw_spectre}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 7.0}
+        ResRef: {type: :resref, value: nw_shfiend}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0311}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 6.9568}
+        Y: {type: :float, value: 0.4297}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 6.3389}
+        Y: {type: :float, value: 3.6721}
+        Z: {type: :float, value: 0.272}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0445}
+        Y: {type: :float, value: 3.3459}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14493
+      value: {}
+
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 5}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 60}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 27.1302}
+        Y: {type: :float, value: 55.4425}
+        Z: {type: :float, value: 0.0}
+    Tag: {type: :cexostr, value: NW_INCORPORGRP}
+    TemplateResRef: {type: :resref, value: nw_incorporgrp}
+    XPosition: {type: :float, value: 73.3881}
+    YPosition: {type: :float, value: 83.9932}
+    ZPosition: {type: :float, value: 0.2213}
 List: 
   type: :list
   value: []
