--- a/mod/area/darkness0.git.yml
+++ b/mod/area/darkness0.git.yml
@@ -151,7 +151,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Comment: {type: :cexostr, value: ""}
     Conversation: {type: :resref, value: ""}
@@ -267,11 +267,13 @@ Encounter List:
         Z: {type: :float, value: 0.225}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: 4.923}
         Y: {type: :float, value: -4.9992}
         Z: {type: :float, value: 0.225}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
+        Comment: {type: :cexostr, value: ""}
         X: {type: :float, value: 4.7471}
         Y: {type: :float, value: -0.13}
         Z: {type: :float, value: 0.225}
@@ -1015,6 +1017,196 @@ Encounter List:
     XPosition: {type: :float, value: 82.7503}
     YPosition: {type: :float, value: 67.8803}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: zombie_large}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: zombie_huge}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 195}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: zombie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 7.0}
+        ResRef: {type: :resref, value: zombie2}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 199}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: zombie3}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 5}
+    DifficultyIndex: {type: :int, value: 3}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 5.585}
+        Y: {type: :float, value: 0.1797}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 5.5388}
+        Y: {type: :float, value: 5.856}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0296}
+        Y: {type: :float, value: 5.0469}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: zombie_hard
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 6}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 60}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 95.8923}
+        Y: {type: :float, value: 59.6001}
+        Z: {type: :float, value: 0.2}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 85.2389}
+        Y: {type: :float, value: 40.1029}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: zombie_hard}
+    TemplateResRef: {type: :resref, value: zombie_hard}
+    XPosition: {type: :float, value: 71.6133}
+    YPosition: {type: :float, value: 82.459}
+    ZPosition: {type: :float, value: 3.2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: zombie_large}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 4.0}
+        ResRef: {type: :resref, value: zombie_huge}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 195}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: zombie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 198}
+        CR: {type: :float, value: 7.0}
+        ResRef: {type: :resref, value: zombie2}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 199}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: zombie3}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 5}
+    DifficultyIndex: {type: :int, value: 3}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: -20.098}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 12.6461}
+        Y: {type: :float, value: -19.4171}
+        Z: {type: :float, value: 0.225}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 12.1903}
+        Y: {type: :float, value: -0.2464}
+        Z: {type: :float, value: 0.2286}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: zombie_hard
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 6}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 60}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 29.6226}
+        Y: {type: :float, value: 55.5623}
+        Z: {type: :float, value: 0.2}
+    Tag: {type: :cexostr, value: zombie_hard}
+    TemplateResRef: {type: :resref, value: zombie_hard}
+    XPosition: {type: :float, value: 77.6}
+    YPosition: {type: :float, value: 20.098}
+    ZPosition: {type: :float, value: -0.1659}
 List: 
   type: :list
   value: []
