--- a/mod/area/darkness001.git.yml
+++ b/mod/area/darkness001.git.yml
@@ -162,6 +162,7 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 186}
         CR: {type: :float, value: 3.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: allip}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -373,11 +374,116 @@ Encounter List:
         X: {type: :float, value: 42.8525}
         Y: {type: :float, value: 45.7462}
         Z: {type: :float, value: 0.4}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 80.4776}
+        Y: {type: :float, value: 45.0925}
+        Z: {type: :float, value: 0.1815}
     Tag: {type: :cexostr, value: Untote_unmoeglich}
     TemplateResRef: {type: :resref, value: untote_unmoglich}
     XPosition: {type: :float, value: 61.5175}
     YPosition: {type: :float, value: 71.9139}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 186}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: allip}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 70}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: erf_skelettkrieg}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 195}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: zombie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 23}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: bodak}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 123}
+        CR: {type: :float, value: 9.0}
+        ResRef: {type: :resref, value: mohrg}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -3.3826}
+        Y: {type: :float, value: -53.6926}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -0.3914}
+        Y: {type: :float, value: -53.442}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.425}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -3.0996}
+        Y: {type: :float, value: 0.0253}
+        Z: {type: :float, value: 0.425}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: "Untote, unm\xF6glich"
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 8}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: []
+
+    Tag: {type: :cexostr, value: Untote_unmoeglich}
+    TemplateResRef: {type: :resref, value: untote_unmoglich}
+    XPosition: {type: :float, value: 22.0797}
+    YPosition: {type: :float, value: 71.5819}
+    ZPosition: {type: :float, value: 0.4}
 List: 
   type: :list
   value: []
